# nextcode-python-sdk

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  cov.xml  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.py  tox.ini
doc/: api.rst  api_basic.rst  api_exceptions.rst  api_phenotype.rst  api_pipelines.rst  api_query.rst  api_workflow.rst  apidoc.rst  conf.py  development.rst  index.rst  jupyter.rst  local_workflows.rst  notebook.ipynb  quickstart.rst  requirements.txt
doc/_static/css/: custom.css
docs/: .buildinfo  Getting started with Python SDK.ipynb  api.html  api_basic.html  api_exceptions.html  api_phenotype.html  api_pipelines.html  api_query.html  api_workflow.html  apidoc.html  development.html  genindex.html  index.html  jupyter.html  local_workflows.html  notebook.html  notebook.ipynb  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/nextcode/: client.html  config.html  exceptions.html  keycloak.html  services.html  session.html  utils.html
docs/_modules/nextcode/services/: pipelines.html  workflow.html
docs/_modules/nextcode/services/phenotype/: exceptions.html  phenotype.html  phenotype_matrix.html  service.html
docs/_modules/nextcode/services/query/: exceptions.html  jupyter.html  query.html  service.html  utils.html
docs/_modules/nextcode/services/workflow/: exceptions.html  job.html  service.html
docs/_sources/: api.rst.txt  api_phenotype.rst.txt  api_pipelines.rst.txt  api_query.rst.txt  api_workflow.rst.txt  apidoc.rst.txt  index.rst.txt  jupyter.rst.txt  notebook.ipynb.txt  quickstart.rst.txt
docs/_static/: documentation_options.js
docs/openapi/: gor-query-api.json  phenotype-archive-api.json  pipelines-service.json  workflow-service.json
nextcode/: __init__.py  client.py  config.py  credentials.py  csa.py  exceptions.py  gor.py  jupyter.py  keycloak.py  nextcode.py  packagelocal.py  session.py  usermanage.py  utils.py
nextcode/services/: __init__.py
nextcode/services/phenoteke/: __init__.py  service.py
nextcode/services/phenotype/: __init__.py  analysis_catalog.py  analysis_catalog_run.py  exceptions.py  phenotype.py  phenotype_matrix.py  playlist.py  service.py
nextcode/services/pipelines/: __init__.py  exceptions.py  job.py  service.py
nextcode/services/project/: __init__.py  exceptions.py  project.py  service.py
nextcode/services/projects/: __init__.py
nextcode/services/query/: __init__.py  exceptions.py  jupyter.py  jupyter_magic.py  query.py  service.py  utils.py
nextcode/services/queryserver/: __init__.py  result.py  service.py
nextcode/services/workflow/: __init__.py  exceptions.py  job.py  pytest_plugin.py  service.py  weblog.py
tests/: __init__.py  test_basic.py  test_client.py  test_credentials.py  test_csa.py  test_jupyter.py  test_keycloak.py  test_nextcode.py  test_packagelocal.py  test_phenotype.py  test_pipelines.py  test_project.py  test_projects.py  test_query.py  test_queryserver.py  test_services.py  test_utils.py  test_workflow.py
tests/data/: aws_credentials  execute_template_response.json  query_response.json  template.ftl.yml  template_response.json
