[tool.poetry]
name = "nextcode-sdk"
version = "2.1.1"
description = "Python SDK for Genuity Science Services"
license = "MIT"
authors = ["WUXI NextCODE <support@wuxinextcode.com>"]
maintainers = ["Genuity Science Software Development <sdev@genuitysci.com>"]
readme = "README.md"
homepage = "https://www.github.com/wuxi-nextcode/nextcode-python-sdk"
repository = "https://www.github.com/wuxi-nextcode/nextcode-python-sdk"
documentation = "https://wuxi-nextcode.github.io/nextcode-python-sdk/"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "nextcode"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
requests = "^2.28.2"
hjson = "^3.1.0"
boto3 = "^1.26.118"
pandas = {version = "^2.0.1", optional = true}
ipython = {version = "^8.12.0", optional = true}
termcolor = {version = "^2.2.0", optional = true}
tqdm = {version = "^4.65.0", optional = true}
ipywidgets = {version = "^8.0.6", optional = true}
plotly = {version = "^5.14.1", optional = true}
PyJWT = "^2.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
responses = "^0.23.1"
pytest-cov = "^4.0.0"
asserts = "^0.12.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-bootstrap-theme = "^0.8.1"
sphinx-rtd-theme = "^1.2.0"
sphinx-autodoc-typehints = "^1.23.0"
nbsphinx = "^0.9.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[tool.poetry.extras]
jupyter = ["pandas", "ipython", "termcolor", "tqdm", "ipywidgets", "plotly"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
